feat: Redesign batch execution with pluggable schedulers
This PR introduces a new execution architecture that enables cross-item
optimization and pluggable scheduling strategies for batch workflows.

- **FlowExecutor**: Unified executor for single and multi-item runs with
  async task execution using FuturesUnordered
- **DebugExecutor**: Step-by-step debugging with queue/eval API and
  support for resuming from persistent state
- **ItemsState**: Cross-item coordinator tracking execution state across
  all items in a batch with O(1) completion checking
- **ItemState**: Per-item state with BitSet-based dependency tracking

- **Scheduler trait**: Interface for custom execution strategies
- **DepthFirstScheduler**: Prioritizes completing items sequentially
  (minimizes time-to-first-result)
- **BreadthFirstScheduler**: Groups tasks by step across items
  (maximizes throughput, enables future batch component invocation)

- Schedulers query ItemsState for task status instead of maintaining
  internal tracking (single source of truth for resume/recovery)
- Atomic counter for O(1) is_all_complete() check in execution loop
- Shared test utilities in testing.rs module
- Comprehensive test coverage including edge cases and failure isolation

- Legacy WorkflowExecutor and ExecutionTracker
- Redundant per-item spawning with semaphore-based concurrency

Closes #347

--- a/stepflow-rs/crates/stepflow-execution/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-execution/Cargo.toml
@@ -20,6 +20,7 @@ bit-set.workspace = true
 error-stack.workspace = true
 futures.workspace = true
 log.workspace = true
+nonempty.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 stepflow-analysis.workspace = true
@@ -33,4 +34,3 @@ uuid.workspace = true
 
 [dev-dependencies]
 stepflow-mock.workspace = true
-serde_yaml_ng.workspace = true
