--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -62,6 +62,8 @@ opentelemetry_sdk = { version = "0.31", features = [
     "metrics",
 ] }
 opentelemetry-semantic-conventions = "0.31"
+nonempty = "0.11"
+parking_lot = "0.12"
 pingora = { version = "0.6", features = ["proxy"] }
 pingora-core = "0.6"
 pingora-http = "0.6"
