refactor: Deduplicate StepflowConfig definitions (#471)
* refactor: Deduplicate StepflowConfig definitions

Move MockPlugin support to stepflow-config crate and update CLI to use
the shared StepflowConfig from stepflow-config instead of its own
duplicate definition.

Closes #470

* chore: fmt + udeps

--- a/stepflow-rs/crates/stepflow-cli/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-cli/Cargo.toml
@@ -18,22 +18,16 @@ workspace = true
 [dependencies]
 clap.workspace = true
 error-stack.workspace = true
-indexmap.workspace = true
 rustyline.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_yaml_ng.workspace = true
 stepflow-analysis.workspace = true
-stepflow-builtins.workspace = true
-stepflow-components-mcp.workspace = true
+stepflow-config.workspace = true
 stepflow-core.workspace = true
 stepflow-execution.workspace = true
-stepflow-mock.workspace = true
 stepflow-plugin.workspace = true
-stepflow-protocol.workspace = true
 stepflow-server.workspace = true
-stepflow-state.workspace = true
-stepflow-state-sql.workspace = true
 stepflow-typecheck.workspace = true
 reqwest.workspace = true
 walkdir.workspace = true
