feat: Add debug event infrastructure for interactive debugging
Implements GDB-like debugging API and REPL commands for step-by-step
workflow execution.

API Endpoints:
- GET /runs/{run_id}/debug/steps - List steps with optional filtering
- GET /runs/{run_id}/debug/steps/{step_id} - Get detailed step info
- GET /runs/{run_id}/debug/status - Get session status and pending action
- GET /runs/{run_id}/debug/events - Get debug event history
- POST /runs/{run_id}/debug/eval - Evaluate a step and its dependencies
- POST /runs/{run_id}/debug/next - Execute next ready step
- POST /runs/{run_id}/debug/step - Step into (same as next for now)
- POST /runs/{run_id}/debug/up - Complete sub-flow (same as continue)
- POST /runs/{run_id}/debug/continue - Run to completion

REPL Commands:
- info [step_id] [--completed|--pending] - Show step info
- status - Show debug session status
- eval <step_id> - Evaluate a step
- next/n - Execute next step
- continue/c - Run to completion
- history [-n N] - Show debug event history

New DTOs:
- StepInfo, StepDetail - Step information structures
- DebugStatus - Session status with pending action
- StepExecutionResult, ContinueResult - Command results
- StepStatusFilter - Query filtering

The debug session tracks events (StepQueued, StepStarted, StepCompleted,
StepFailed, RunCompleted) for history and session recovery.

--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -96,6 +96,7 @@ stepflow-builtins = { path = "./crates/stepflow-builtins" }
 stepflow-components-mcp = { path = "./crates/stepflow-components-mcp" }
 stepflow-config = { path = "./crates/stepflow-config" }
 stepflow-core = { path = "./crates/stepflow-core" }
+stepflow-dtos = { path = "./crates/stepflow-dtos" }
 stepflow-execution = { path = "./crates/stepflow-execution" }
 stepflow-mock = { path = "./crates/stepflow-mock" }
 stepflow-observability = { path = "./crates/stepflow-observability" }
