--- a/stepflow-rs/crates/stepflow-execution/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-execution/Cargo.toml
@@ -24,9 +24,10 @@ nonempty.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 stepflow-analysis.workspace = true
+stepflow-core.workspace = true
+stepflow-dtos.workspace = true
 stepflow-observability.workspace = true
 stepflow-plugin.workspace = true
-stepflow-core.workspace = true
 stepflow-state.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
