--- a/stepflow-rs/crates/stepflow-cli/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-cli/Cargo.toml
@@ -25,6 +25,7 @@ serde_yaml_ng.workspace = true
 stepflow-analysis.workspace = true
 stepflow-config.workspace = true
 stepflow-core.workspace = true
+stepflow-dtos.workspace = true
 stepflow-execution.workspace = true
 stepflow-plugin.workspace = true
 stepflow-server.workspace = true
