--- a/stepflow-rs/crates/stepflow-server/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-server/Cargo.toml
@@ -23,10 +23,10 @@ error-stack.workspace = true
 indexmap.workspace = true
 serde_json.workspace = true
 serde.workspace = true
-serde_with.workspace = true
 stepflow-analysis.workspace = true
 stepflow-config.workspace = true
 stepflow-core.workspace = true
+stepflow-dtos.workspace = true
 stepflow-execution.workspace = true
 stepflow-plugin.workspace = true
 stepflow-state.workspace = true
