--- a/stepflow-rs/crates/stepflow-state/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-state/Cargo.toml
@@ -24,6 +24,7 @@ futures.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 stepflow-core.workspace = true
+stepflow-dtos.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 utoipa.workspace = true
