--- a/load-tests/workflows/stepflow-standalone-config.yml
+++ b/load-tests/workflows/stepflow-standalone-config.yml
@@ -5,7 +5,7 @@ plugins:
     type: stepflow
     transport: stdio
     command: uv
-    args: ["--project", "../../sdks/python", "run", "stepflow_py"]
+    args: ["--project", "../../sdks/python/stepflow-server", "run", "stepflow_server"]
   custom:
     type: stepflow
     transport: stdio
