--- a/stepflow-rs/crates/stepflow-cli/tests/tracing/workflows/stepflow-config.yml
+++ b/stepflow-rs/crates/stepflow-cli/tests/tracing/workflows/stepflow-config.yml
@@ -8,7 +8,7 @@ plugins:
     type: stepflow
     transport: stdio
     command: uv
-    args: ["run", "--project", "../../../../../../sdks/python", "stepflow_py"]
+    args: ["run", "--project", "../../../../../../sdks/python/stepflow-server", "stepflow_server"]
     env:
       STEPFLOW_TRACE_ENABLED: "${STEPFLOW_TRACE_ENABLED:-false}"
       STEPFLOW_OTLP_ENDPOINT: "${STEPFLOW_OTLP_ENDPOINT}"
