--- a/examples/basic/stepflow-config-tracing.yml
+++ b/examples/basic/stepflow-config-tracing.yml
@@ -30,7 +30,7 @@ plugins:
     type: stepflow
     transport: stdio
     command: uv
-    args: ["--project", "../../sdks/python", "run", "stepflow_py"]
+    args: ["--project", "../../sdks/python/stepflow-server", "run", "stepflow_server"]
     # Environment variables for Python component server tracing
     # The Python SDK reads these variables to configure OpenTelemetry
     env:
