--- a/examples/file-loading/stepflow-config.yml
+++ b/examples/file-loading/stepflow-config.yml
@@ -3,7 +3,7 @@ plugins:
     type: stepflow
     transport: stdio
     command: uv
-    args: ["--project", "../../sdks/python", "run", "stepflow_py"]
+    args: ["--project", "../../sdks/python/stepflow-server", "run", "stepflow_server"]
   builtin:
     type: builtin
 routes:
