--- a/examples/production-model-serving/stepflow-config-dev.yml
+++ b/examples/production-model-serving/stepflow-config-dev.yml
@@ -23,7 +23,7 @@ plugins:
     type: stepflow
     transport: stdio
     command: uv
-    args: ["--project", "../../sdks/python", "run", "stepflow_py"]
+    args: ["--project", "../../sdks/python/stepflow-server", "run", "stepflow_server"]
     env:
       LOG_LEVEL: "${LOG_LEVEL:-INFO}"
 
