refactor!: Replace STDIO transport with unified HTTP transport
BREAKING CHANGE: Remove STDIO-based component communication protocol in favor
of HTTP-only transport with subprocess and remote URL support.

Remove STDIO transport:
- Delete stdio/client.rs, stdio/launcher.rs, and stdio/recv_message_loop.rs
- Remove STDIO-specific protocol handling and message loop
- Eliminate bidirectional STDIO complexity and framing overhead

Unify on HTTP transport:
- Single transport for both managed subprocesses and remote URLs
- Subprocesses now use HTTP via subprocess/launcher.rs
- Launch subprocesses that print port to stdout, then communicate via HTTP
- Supports both subprocess mode (command + args) and remote mode (url)

Update to HTTP-only:
- Replace stdio_server.py with http_server.py as primary interface
- Update StepflowHttpServer to use FastAPI/Uvicorn
- Print port announcement {"port": N} to stdout for subprocess discovery
- Remove STDIO server implementation and tests

Update examples and configs:
- Change all stepflow-config.yml to use HTTP transport
- Update Python component servers to use StepflowHttpServer
- Update Langflow integration for HTTP-only mode

Fix subprocess cleanup with three-part solution:

1. Break circular reference with Weak<dyn Context>:
   - HttpClient stores Weak<dyn Context> instead of Arc
   - Breaks cycle: executor → plugin → client → context → executor
   - Allows Drop to run when server shuts down

2. Add SIGTERM/SIGINT signal handling:
   - Graceful shutdown on signal reception
   - Allows Drop implementations to run instead of abrupt termination
   - Server logs shutdown progress for debugging

3. Use Unix process groups for grandchildren:
   - Spawn subprocesses in new process group via setpgid
   - Kill entire process group in Drop (SIGTERM)
   - Handles cases like uv spawning Python servers
   - Prevents orphaned grandchild processes

Without all three pieces, subprocesses would leak:
- Without Weak: Circular reference prevents Drop fr

--- a/tests/http/error_handling.yaml
+++ b/tests/http/error_handling.yaml
@@ -35,7 +35,7 @@ test:
   servers:
     test_http:
       command: "uv"
-      args: ["run", "--project", "../../sdks/python", "--extra", "http", "python", "test_python_server.py", "--http", "--port", "{port}"]
+      args: ["run", "--project", "../../sdks/python", "--extra", "http", "python", "test_python_server.py", "--port", "{port}"]
       env: {}
       working_directory: ""
       port_range: [18000, 19000]
@@ -53,7 +53,6 @@ test:
         type: builtin
       test_http:
         type: stepflow
-        transport: http
         url: "{test_http.url}"
 
     routes:
