feat: Subflow execution support in FlowExecutor
Add infrastructure for executing nested workflows (subflows) within the
FlowExecutor, enabling components like /builtin/map to spawn and manage
child workflow executions without separate executors.

Key changes:

Multi-run execution model:
- FlowExecutor now manages multiple concurrent runs via HashMap<RunId, RunState>
- Each run has its own completion channel (watch::Sender<CompletionStatus>)
- Root run ID tracked separately from dynamically submitted subflows

Subflow submission mechanism:
- SubflowSubmitter: channel-based handle for components to submit subflows
- SubflowReceiver: receives requests in executor's main loop
- SubflowRequest contains flow, inputs, variables, and response channel
- Synchronous run creation via StateWriteOperation::CreateRun

Refactoring:
- Rename StepflowExecutor to StepflowEnvironment and move to
  stepflow-plugin crate
- Simplify StepRunner to use StepflowEnvironment directly
- Create stepflow-dtos crate for data transfer types (RunStatus, etc.)
- Remove cyclic Weak reference from HttpClientHandle by passing `env`
  explicitly through the chain during component execution.
- Make plugin initialization idempotent and automatic

--- a/stepflow-rs/crates/stepflow-execution/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-execution/Cargo.toml
@@ -28,6 +28,7 @@ stepflow-analysis.workspace = true
 stepflow-observability.workspace = true
 stepflow-plugin.workspace = true
 stepflow-core.workspace = true
+stepflow-dtos.workspace = true
 stepflow-state.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
