--- a/stepflow-rs/crates/stepflow-mock/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-mock/Cargo.toml
@@ -21,6 +21,7 @@ serde.workspace = true
 stepflow-plugin.workspace = true
 stepflow-core.workspace = true
 log.workspace = true
+tokio.workspace = true
 
 [dev-dependencies]
 static_assertions.workspace = true
