--- a/stepflow-rs/crates/stepflow-plugin/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-plugin/Cargo.toml
@@ -18,14 +18,15 @@ doctest = false
 [dependencies]
 dynosaur.workspace = true
 error-stack.workspace = true
-futures.workspace = true
 indexmap.workspace = true
 matchit.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 stepflow-core.workspace = true
+stepflow-dtos.workspace = true
 stepflow-state.workspace = true
 thiserror.workspace = true
+tokio = { workspace = true, features = ["sync"] }
 trait-variant.workspace = true
 log.workspace = true
 uuid.workspace = true
