--- a/stepflow-rs/crates/stepflow-protocol/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-protocol/Cargo.toml
@@ -22,8 +22,9 @@ reqwest-eventsource.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 stepflow-core.workspace = true
+stepflow-dtos.workspace = true
+stepflow-execution.workspace = true
 stepflow-plugin.workspace = true
-stepflow-state.workspace = true
 subst.workspace = true
 utoipa.workspace = true
 strum.workspace = true
@@ -39,7 +40,6 @@ nix.workspace = true
 [dev-dependencies]
 similar-asserts.workspace = true
 serde_json.workspace = true
-chrono.workspace = true
 
 [lints]
 workspace = true
