--- a/stepflow-rs/crates/stepflow-state/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-state/Cargo.toml
@@ -21,10 +21,9 @@ chrono.workspace = true
 dashmap.workspace = true
 error-stack.workspace = true
 futures.workspace = true
-serde.workspace = true
 serde_json.workspace = true
 stepflow-core.workspace = true
+stepflow-dtos.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
-utoipa.workspace = true
 uuid.workspace = true
