--- a/examples/production/k8s/stepflow/langflow-worker/deployment.yaml
+++ b/examples/production/k8s/stepflow/langflow-worker/deployment.yaml
@@ -111,6 +111,9 @@ spec:
               name: stepflow-secrets
               key: opensearch-password
               optional: true
+        # Docling document processing service
+        - name: DOCLING_SERVE_URL
+          value: "http://docling-serve.stepflow.svc.cluster.local:5001"
         - name: PYTHONUNBUFFERED
           value: "1"
         # Stepflow logging configuration
