refactor: Convert StepflowEnvironment to type map pattern
Move StepflowEnvironment from stepflow-plugin to stepflow-core as a
generic type map (HashMap<TypeId, Box<dyn Any + Send + Sync>>). This
decouples the environment container from its contents, allowing
stepflow-core to have zero dependencies on plugins or state.

Key changes:
- New type map implementation in stepflow-core/src/environment.rs
- StateStoreExt extension trait in stepflow-state for state_store() access
- PluginRouterExt extension trait in stepflow-plugin for plugin access
- StepflowEnvironmentBuilder in stepflow-plugin for construction
- Updated all call sites to use extension traits

Benefits:
- stepflow-core now has no plugin/state dependencies
- Each crate only depends on stepflow-core + specific types it needs
- Registration happens at composition root (stepflow-config)
- Extensible: additional resources can be added without modifying core

Closes #501

--- a/stepflow-rs/crates/stepflow-protocol/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-protocol/Cargo.toml
@@ -25,6 +25,7 @@ stepflow-core.workspace = true
 stepflow-dtos.workspace = true
 stepflow-execution.workspace = true
 stepflow-plugin.workspace = true
+stepflow-state.workspace = true
 subst.workspace = true
 utoipa.workspace = true
 strum.workspace = true
