refactor: Standardize check scripts with consistent output and -v flag
- Add scripts/_lib.sh with shared helper functions (run_check,
  print_step, print_pass, print_fail, etc.)
- Change all scripts to default quiet mode with -v/--verbose flag
- Show each sub-step as it runs with pass/fail indicators
- Display fix instructions and rerun commands on failure
- Update GitHub Actions to pass -v flag for CI verbose output
- Remove redundant test-all.sh (check-all.sh covers same checks)
- Simplify scripts by using shared library (~650 lines removed)

Scripts now provide clear, actionable output. Default output shows
progress and failures only; use -v for full command output.

This closes #499.

--- a/.github/actions/docs-checks/action.yml
+++ b/.github/actions/docs-checks/action.yml
@@ -29,4 +29,4 @@ runs:
     # Run documentation checks using the shared script
     - name: Run documentation checks
       shell: bash
-      run: ./scripts/check-docs.sh
+      run: ./scripts/check-docs.sh -v
