--- a/examples/production/k8s/stepflow/docling/deployment.yaml
+++ b/examples/production/k8s/stepflow/docling/deployment.yaml
@@ -44,7 +44,7 @@ spec:
     spec:
       containers:
       - name: docling-serve
-        image: quay.io/docling-project/docling-serve-cpu:latest
+        image: quay.io/docling-project/docling-serve-cpu:v1.10.0
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
@@ -77,13 +77,22 @@ spec:
         # Without this, OMP may spawn too many threads causing performance degradation
         - name: OMP_NUM_THREADS
           value: "4"
-        # OpenTelemetry configuration (standard OTEL_* variables)
-        # Note: Verify docling-serve OTLP support; these are standard env vars
-        # that OpenTelemetry-instrumented applications typically respect
-        - name: OTEL_SERVICE_NAME
+        # Docling-serve v1.10.0 OpenTelemetry configuration
+        # Enables metrics and traces via OTLP to align with existing observability stack
+        - name: DOCLING_SERVE_OTEL_ENABLE_METRICS
+          value: "true"
+        - name: DOCLING_SERVE_OTEL_ENABLE_TRACES
+          value: "true"
+        - name: DOCLING_SERVE_OTEL_ENABLE_PROMETHEUS
+          value: "false"  # Disabled - metrics pushed via OTLP instead
+        - name: DOCLING_SERVE_OTEL_ENABLE_OTLP_METRICS
+          value: "true"   # Push metrics to OTel Collector
+        - name: DOCLING_SERVE_OTEL_SERVICE_NAME
           value: "docling-serve"
+        # Standard OTEL endpoint for traces and metrics
         - name: OTEL_EXPORTER_OTLP_ENDPOINT
           value: "http://otel-collector.stepflow-o12y.svc.cluster.local:4317"
+        # Resource attributes for trace/metric correlation
         - name: OTEL_RESOURCE_ATTRIBUTES
           value: "deployment.environment=kubernetes,service.namespace=stepflow"
         # Docling-serve configuration
