refactor: Simplify Diagnostic and Path types for cleaner OpenAPI schemas
Refactor internal types to produce more stable, user-friendly OpenAPI schemas:

**Diagnostic API changes:**
- Merge DiagnosticMessage into Diagnostic (eliminates wrapper type)
- Add builder methods: `.at(path)` and `.experimental()`
- Support optional trailing commas in `diagnostic!` macro
- Diagnostic now contains: kind, code, level, formatted, data, path, experimental

**Path serialization:**
- Path now serializes as a string (e.g., "$.steps[0].input") instead of
  an array of PathPart objects

**Python SDK cleanup:**
- Remove Pydantic-based `apply_stepflow_tweaks` (only used in tests)
- Keep only `apply_stepflow_tweaks_to_dict` for production use
- Fix generate_api_client.py check command to apply all post-processing
- Remove obsolete oneOf models (DiagnosticMessage, PathPart variants)

Closes #525

--- a/stepflow-rs/crates/stepflow-analysis/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-analysis/Cargo.toml
@@ -23,6 +23,7 @@ serde.workspace = true
 stepflow-core.workspace = true
 stepflow-plugin.workspace = true
 stepflow-typecheck.workspace = true
+strum.workspace = true
 utoipa.workspace = true
 thiserror.workspace = true
 
