refactor: Unify test server management with subprocess plugin infrastructure
Eliminates special case handling for test servers by leveraging the HTTP
protocol capability from PR #486. Test servers now use the same subprocess
plugin mechanism as regular component plugins.

Key changes:
- Add HealthCheckConfig to subprocess plugins with configurable path,
  timeout, and retry delay
- Add config_file field to TestConfig for referencing external configs
- Remove TestServerManager, TestServerConfig, and TestServerHealthCheck
- Migrate test workflows to use inline plugin configs instead of the
  old servers section

This enables:
- Automatic port allocation via stdout port announcement
- Unified health check configuration across test and production
- Shared test configs across multiple flows via config_file reference

Fixes #489

--- a/tests/http/error_handling.yaml
+++ b/tests/http/error_handling.yaml
@@ -32,28 +32,18 @@ output:
     path: result
 
 test:
-  servers:
-    test_http:
-      command: "uv"
-      args: ["run", "--project", "../../sdks/python", "--extra", "http", "python", "test_python_server.py", "--port", "{port}"]
-      env: {}
-      working_directory: ""
-      port_range: [18000, 19000]
-      health_check:
-        path: "/health"
-        timeout_ms: 5000
-        retry_attempts: 10
-        retry_delay_ms: 500
-      startup_timeout_ms: 10000
-      shutdown_timeout_ms: 5000
-
   config:
     plugins:
       builtin:
         type: builtin
       test_http:
         type: stepflow
-        url: "{test_http.url}"
+        command: uv
+        args: ["run", "--project", "../../sdks/python", "--extra", "http", "python", "test_python_server.py"]
+        healthCheck:
+          path: /health
+          timeoutMs: 10000
+          retryDelayMs: 500
 
     routes:
       "/builtin/{component}":
