feat: Return flow_id in dry_run mode for store_flow endpoint
Always compute and return flow_id (content-based hash) regardless of
dry_run or validation status. Add stored boolean field to indicate
whether the flow was actually persisted.

This enables:
- Clients to know the ID before committing to store
- Caching/deduplication logic in clients
- Better idempotency handling

API change:
- flow_id is now always present (was nullable)
- New stored field: true if persisted, false for dry_run or fatal errors

Also adds API client codegen check to Python CI to ensure generated
types stay in sync with OpenAPI schema.

Closes #526

--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -71,12 +71,16 @@ cmd = "uvx ${DEPTRY} src"
 
 [tool.poe.tasks.codegen-check]
 help = "Check that generated types are up-to-date"
-cmd = "uv run python generate.py --check"
+sequence = [
+    {cmd = "uv run python generate.py --check"},
+    {cmd = "uv run python scripts/generate_api_client.py check"},
+]
 
 [tool.poe.tasks.codegen-fix]
 help = "Regenerate types from schemas"
 sequence = [
     {cmd = "uv run python generate.py"},
+    {cmd = "uv run python scripts/generate_api_client.py"},
 ]
 
 [tool.poe.tasks.test]
