feat: Add StepflowConfig JSON schema and stdin config input
- Generate stepflow-config.json schema from Rust types using utoipa
- Add --config-stdin flag to stepflow-server CLI for piping config JSON
- Add StepflowConfig.load_from_json() method for parsing config from string
- Generate Python config types from schema (stepflow_py.config module)
- Update Python orchestrator to accept config object or dict via stdin
- Update integration tests to use typed StepflowConfig instead of tempfiles

This allows the Python orchestrator to pass configuration directly to the
server subprocess without needing temporary config files.

Closes #524

--- a/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
@@ -37,6 +37,7 @@ tokio.workspace = true
 # Utilities
 indexmap.workspace = true
 subst.workspace = true
+utoipa.workspace = true
 
 [dev-dependencies]
 uuid.workspace = true
