--- a/stepflow-rs/crates/stepflow-config/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-config/Cargo.toml
@@ -23,6 +23,7 @@ serde_json.workspace = true
 serde_yaml_ng.workspace = true
 stepflow-builtins.workspace = true
 stepflow-components-mcp.workspace = true
+stepflow-core.workspace = true
 stepflow-plugin.workspace = true
 stepflow-protocol.workspace = true
 stepflow-state.workspace = true
@@ -31,3 +32,4 @@ stepflow-mock.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 log.workspace = true
+utoipa.workspace = true
