--- a/stepflow-rs/crates/stepflow-state-sql/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-state-sql/Cargo.toml
@@ -29,5 +29,6 @@ stepflow-state.workspace = true
 tokio.workspace = true
 log.workspace = true
 uuid.workspace = true
+utoipa.workspace = true
 
 [dev-dependencies]
