--- a/sdks/python/stepflow-py/pyproject.toml
+++ b/sdks/python/stepflow-py/pyproject.toml
@@ -100,7 +100,7 @@ packages = ["src/stepflow_py"]
 [tool.ruff]
 target-version = "py311"
 line-length = 88
-extend-exclude = ["**/generated_*.py", "**/api/**"]
+extend-exclude = ["**/generated_*.py", "**/_generated_*.py", "**/api/**"]
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "W", "UP", "B", "C4"]
@@ -109,13 +109,14 @@ ignore = []
 [tool.ruff.lint.per-file-ignores]
 "**/{tests,tools,scripts}/*" = ["D", "DOC", "T201", "B018", "F841", "E712"]
 "**/generated_*.py" = ["E501", "UP006", "UP035"]
+"**/_generated_*.py" = ["E501", "UP006", "UP035"]
 "**/api/**" = ["E501", "F401", "UP006", "UP035"]
 
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
 docstring-code-format = true
-exclude = ["**/generated_*.py", "**/api/**"]
+exclude = ["**/generated_*.py", "**/_generated_*.py", "**/api/**"]
 
 [tool.deptry]
 ignore = ["DEP002"]
