--- a/stepflow-rs/crates/stepflow-plugin/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-plugin/Cargo.toml
@@ -30,6 +30,7 @@ tokio = { workspace = true, features = ["sync"] }
 trait-variant.workspace = true
 log.workspace = true
 uuid.workspace = true
+utoipa.workspace = true
 
 [dev-dependencies]
 serde_yaml_ng.workspace = true
