refactor: Reverse dependency between stepflow-py and stepflow-orchestrator
- Remove stepflow-py dependency from stepflow-orchestrator
- Add optional `local` extra to stepflow-py that depends on stepflow-orchestrator
- Add StepflowClient.local() method for convenient orchestrator management
- Change StepflowOrchestrator.start() to return orchestrator instead of client
- Update test fixtures to use new StepflowClient.local() API
- Remove StepflowClient re-export from stepflow-orchestrator

This enables independent versioning where stepflow-py X.Y.* uses
stepflow-orchestrator X.Y.latest, allowing Rust binary patches without
requiring Python SDK releases.

--- a/sdks/python/stepflow-py/pyproject.toml
+++ b/sdks/python/stepflow-py/pyproject.toml
@@ -67,6 +67,9 @@ http = [
 langchain = [
     "langchain-core>=0.3",
 ]
+local = [
+    "stepflow-orchestrator~=0.8.0",
+]
 
 [dependency-groups]
 dev = [
