feat: Restructure orchestrator release to include Python wheels
- Rename stepflow-rs release to orchestrator release (orchestrator-v<version> tag)
- Orchestrator release now produces: Rust binaries, Docker images, and platform-specific Python wheels for stepflow-orchestrator
- Add build-orchestrator-wheels.sh script for building wheels from pre-built binaries
- Update stepflow-py release to update stepflow-orchestrator constraint on minor/major bumps
- Update cliff.toml to include stepflow-orchestrator paths and new tag pattern
- Configure hatch artifacts for binary inclusion in wheels

Closes #510

--- a/.github/workflows/release_prepare.yml
+++ b/.github/workflows/release_prepare.yml
@@ -8,9 +8,9 @@ on:
         required: true
         type: choice
         options:
-          - stepflow-rs
+          - stepflow
           - stepflow-py
-        default: 'stepflow-rs'
+        default: 'stepflow'
       bump_type:
         description: 'Type of version bump'
         required: true
@@ -59,11 +59,11 @@ jobs:
       - name: Prepare release
         run: |
           case "${{ inputs.package }}" in
-            stepflow-rs)
+            stepflow)
               if [[ -n "${{ inputs.message }}" ]]; then
-                ./scripts/prepare-release-rust.sh ${{ inputs.bump_type }} --pr --message "${{ inputs.message }}"
+                ./scripts/prepare-release-stepflow.sh ${{ inputs.bump_type }} --pr --message "${{ inputs.message }}"
               else
-                ./scripts/prepare-release-rust.sh ${{ inputs.bump_type }} --pr
+                ./scripts/prepare-release-stepflow.sh ${{ inputs.bump_type }} --pr
               fi
               ;;
             stepflow-py)
