--- a/stepflow-rs/cliff.toml
+++ b/stepflow-rs/cliff.toml
@@ -1,4 +1,5 @@
-# Configuration file for git-cliff for stepflow-rs package
+# Configuration file for git-cliff for the stepflow release
+# Covers stepflow-rs (Rust) and stepflow-orchestrator (Python wrapper)
 # See: https://git-cliff.org/docs/configuration
 
 [changelog]
@@ -12,8 +13,8 @@ All notable changes to this project will be documented in this file.
 # Template for the changelog body
 body = """
 {%- if version -%}
-    {%- set clean_version = version | trim_start_matches(pat="stepflow-rs-") -%}
-    ## <a id="{{ clean_version }}"></a> [Stepflow {{ clean_version }}](https://github.com/stepflow-ai/stepflow/releases/tag/stepflow-rs-{{ clean_version }}) - {{ timestamp | date(format="%Y-%m-%d") }}
+    {%- set clean_version = version | trim_start_matches(pat="stepflow-") -%}
+    ## <a id="{{ clean_version }}"></a> [Stepflow {{ clean_version }}](https://github.com/stepflow-ai/stepflow/releases/tag/stepflow-{{ clean_version }}) - {{ timestamp | date(format="%Y-%m-%d") }}
 {%- else -%}
     ## unreleased
 {%- endif -%}
@@ -41,15 +42,18 @@ conventional_commits = true
 filter_unconventional = true
 # Process each line of a commit as an individual commit
 split_commits = false
-# Only include commits that affect the stepflow-rs directory or root files that affect stepflow-rs
+# Only include commits that affect stepflow (stepflow-rs + Python wrapper)
 filter_commits = true
 # Include commits that modify files in these paths
 include_paths = [
     "stepflow-rs/**",
+    "sdks/python/stepflow-orchestrator/**",
+    "scripts/build-stepflow-wheels.sh",
+    "scripts/prepare-release-stepflow.sh",
     "CLAUDE.md",
     "CONTRIBUTING.md",
     "README.md",
-    ".github/workflows/release_rust.yml",
+    ".github/workflows/release_stepflow.yml",
     ".github/workflows/ci.yml"
 ]
 # Regex for preprocessing the commit messages
@@ -74,7 +78,7 @@ commit_parsers = [
 # Protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
 # Glob pattern for matching git tags
-tag_pattern = "stepflow-rs-[0-9.]*"
+tag_pattern = "stepflow-[0-9.]*"
 # Regex for skipping tags
 # Regex for ignoring tags
 ignore_tags = ""
