fix: Add cliff.toml and fix changelog path for stepflow-py
The prepare-release-python.sh script was missing a cliff.toml config
and was trying to create CHANGELOG.md in the wrong directory.

Changes:
- Add sdks/python/stepflow-py/cliff.toml to track stepflow-py changes
- Update script to prepend to ../CHANGELOG.md (sdks/python/CHANGELOG.md)
  which is the existing changelog location with release history
- Fix Changelog URL in pyproject.toml to point to correct location
- Fix release_dispatch.yml to extract version from correct pyproject.toml
  (sdks/python/stepflow-py/pyproject.toml instead of sdks/python/pyproject.toml)

--- a/.github/workflows/release_dispatch.yml
+++ b/.github/workflows/release_dispatch.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Extract version from pyproject.toml
         id: version
-        working-directory: sdks/python
+        working-directory: sdks/python/stepflow-py
         run: |
           VERSION=$(grep '^version = ' pyproject.toml | head -1 | sed 's/version = "\(.*\)"/\1/')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
