--- a/examples/production/k8s/stepflow/loadbalancer/deployment.yaml
+++ b/examples/production/k8s/stepflow/loadbalancer/deployment.yaml
@@ -33,8 +33,8 @@ spec:
     spec:
       containers:
       - name: load-balancer
-        image: localhost/stepflow-load-balancer:latest
-        imagePullPolicy: Never  # Use local image loaded into Kind
+        image: ghcr.io/stepflow-ai/stepflow/stepflow-load-balancer:alpine-0.9.0
+        imagePullPolicy: IfNotPresent
         ports:
         - name: http
           containerPort: 8080
