--- a/examples/production/k8s/stepflow/server/deployment.yaml
+++ b/examples/production/k8s/stepflow/server/deployment.yaml
@@ -33,8 +33,8 @@ spec:
     spec:
       containers:
       - name: stepflow-server
-        image: localhost/stepflow-server:latest
-        imagePullPolicy: Never  # Use local image loaded into Kind
+        image: ghcr.io/stepflow-ai/stepflow/stepflow-server:alpine-0.9.0
+        imagePullPolicy: IfNotPresent
         ports:
         - name: http
           containerPort: 7840
